--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <a href="/demo.html" target="_blank">demo</a>
+    <!-- <a href="/demo.html" target="_blank">demo</a> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
