--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <!-- <a href="/demo.html" target="_blank">demo</a> -->
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
