--- a/widget/demo.html
+++ b/widget/demo.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     1
-    <script type="module" src="/add.js"></script>
+    <script type="module" src="./scripts/widget.js"></script>
 </body>
 </html>
