--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- <a href="/demo.html" target="_blank">demo</a> -->
-    <script type="module" src="/index.js"></script>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; URL='https://www.versacommerce.de'" />
+</head>
+<body>
+</body>
 </html>
