--- a/demo_2.html
+++ b/demo_2.html
@@ -6,6 +6,6 @@
     <title>Demo 2</title>
   </head>
   <body>
-    <script type="module" src="./index.js" data-config-url="/src/data/configuration.json"></script>
+    <script type="module" src="./index.js" data-config-url="/public/data/configuration.json"></script>
   </body>
 </html>
