--- a/widget.html
+++ b/widget.html
@@ -40,7 +40,7 @@
                 👋 Hi, my name is Sergiusz
               </div>
               <div class="contact-widget-message" id="videoMessage" style="margin-top: 10px; width: 100%;">
-                <iframe id="video_message_iframe" width="100%" height="178" src="https://www.youtube.com/embed/UV0mhY2Dxr0?autoplay=1&mute=1&loop=1&rel=0&showinfo=0&controls=2&fs=0&modestbranding=1&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
+                <iframe id="video_message_iframe" width="100%" height="178" ></iframe>
               </div>
               <div class="contact-widget-message" data-i18n="contactChannelMessage">Choose a contact channel:</div>
               <div class="contact-widget-buttons">
