--- a/widget.html
+++ b/widget.html
@@ -23,12 +23,12 @@
       <div class="contact-widget-container">
         <div class="contact-widget-header" id="header">
           <a id="saveContact" target="_blank" class="contact-widget-save-contact-link" title="Would you like to get in touch at a later time? Save our contact details to your address book.">
-            <img src="./assets/card-account-phone-outline.svg" alt="" class="contact-widget-save-contact-icon-1">
+            <img src="./public/card-account-phone-outline.svg" alt="" class="contact-widget-save-contact-icon-1">
             <span data-i18n="saveContact">Save contact</span>
           </a>
           <i class="fa-solid fa-xmark contact-widget-close"></i>
         </div>
-        <!-- <a href="https://www.versacommerce.de/" target="_blank" class="contact-widget-branding" style="display: inline;"><img src="./assets/versacommerce.webp" alt="" class="contact-widget-branding-image"> <span data-i18n="poweredBy">powered by</span> <span class="contact-widget-branding-text">VersaCommerce</span></a> -->
+        <!-- <a href="https://www.versacommerce.de/" target="_blank" class="contact-widget-branding" style="display: inline;"><img src="./public/versacommerce.webp" alt="" class="contact-widget-branding-image"> <span data-i18n="poweredBy">powered by</span> <span class="contact-widget-branding-text">VersaCommerce</span></a> -->
         <div class="contact-widget-inner">
           <div class="contact-widget-local-time">Tuesday, June 4th</div>
           <div class="contact-widget-grid">
@@ -40,7 +40,7 @@
                 👋 Hi, my name is Sergiusz
               </div>
               <div class="contact-widget-message" id="videoMessage" style="margin-top: 10px; width: 100%;">
-                <iframe id="video_message_iframe" width="100%" height="178" ></iframe>
+                <iframe id="video_message_iframe" width="100%" height="178"></iframe>
               </div>
               <div class="contact-widget-message" data-i18n="contactChannelMessage">Choose a contact channel:</div>
               <div class="contact-widget-buttons">
@@ -268,7 +268,7 @@
                   <div class="contact-widget-message" data-i18n="messengerText">Please use the "Start conversation" button below or scan the QR Code to instantly start a Messenger conversation from your smartphone.</div>
                   <div class="contact-widget-message">
                     <span data-i18n="messengerQRText">Messenger QR Code:</span>
-                    <img class="contact-widget-qr" src="./assets/versacommerce-qr.svg" alt="scan to start chat">
+                    <img class="contact-widget-qr" src="./public/versacommerce-qr.svg" alt="scan to start chat">
                   </div>
                   <div class="contact-widget-reply-info">
                     <b>11:38 AM</b> - <span class="contact-widget-reply-info-response">Typically replies within a few hours</span>
@@ -341,7 +341,7 @@
                   <div class="contact-widget-message">
                     <span data-i18n="phoneQRText">Scan the QR Code to instantly call from your smartphone.
                     </span>
-                    <img class="contact-widget-qr" src="./assets/versacommerce-qr.svg" alt="scan to start chat">
+                    <img class="contact-widget-qr" src="./public/versacommerce-qr.svg" alt="scan to start chat">
                   </div>
                   <div class="contact-widget-reply-info">
                     <b>11:38 AM</b>
@@ -375,7 +375,7 @@
                   </div>
                   <div class="contact-widget-message">
                     <span data-i18n="smsQRText">Scan the QR Code to instantly send a SMS message from your smartphone.</span>
-                    <img class="contact-widget-qr" src="./assets/versacommerce-qr.svg" alt="scan to start chat">
+                    <img class="contact-widget-qr" src="./public/versacommerce-qr.svg" alt="scan to start chat">
                   </div>
                   <div class="contact-widget-reply-info">
                     <b>11:38 AM</b>
